sumo/tests/sumo/errors/too_long_vehicle/errors.sumo.exe
Error: Vehicle 'route0' is too long to start at 'in'.
